Added foursquare connect capability. By clicking on foursquare button, redirects to foursquare.com for permission then redirects to site with code to. Send request to foursquare with code and recieve back access token.

--- a/app/views/foursquare/index.html.erb
+++ b/app/views/foursquare/index.html.erb
@@ -1,1 +1,7 @@
-What to do this weekend...
+<h2>What to do this weekend...</h2>
+
+<div>
+	<a href="https://foursquare.com/oauth2/authenticate?client_id=ESHSNEX3FLAX0EC0U3FJGNNHFAAGK0IEE1CJEIWMIQGRP25N&response_type=code&redirect_uri=http://localhost:3000/foursquare/feed">
+		<img src="/images/foursquare_connect.png" />
+	</a>
+</div>
